infra/kong/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
  namespace: kong
spec:
  controllerName: konghq.com/gateway-operator

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: convertx-gateway
  namespace: kong
spec:
  gatewayClassName: kong
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: convertx-tls
